# spin

./: CONTRIBUTING.md  Cargo.toml  GOVERNANCE.md  Makefile  NOTICE.md  README.md  ROADMAP.md  SECURITY.md  build.rs  info.txt
.github/: gh-checktags.sh
.github/ISSUE_TEMPLATE/: report-bug-or-problem.md
.github/actions/spin-ci-dependencies/: action.yml
.github/workflows/: audits.yml  build.yml  check-tags.yml  code-coverage.yml  dispatch.yml  release.yml  rust-sdk-release.yml
crates/app/src/: lib.rs
crates/common/src/: assert.rs  data_dir.rs  lib.rs
crates/componentize/: Cargo.toml
crates/componentize/src/: bugs.rs  lib.rs  module_info.rs
crates/compose/: Cargo.toml
crates/compose/src/: lib.rs
crates/core/src/: lib.rs  limits.rs  store.rs
crates/core/tests/: integration_test.rs
crates/doctor/: Cargo.toml
crates/doctor/src/: lib.rs
crates/environments/: Cargo.toml
crates/environments/src/: environment.rs  lib.rs  loader.rs
crates/environments/src/environment/: definition.rs  env_loader.rs  lockfile.rs
crates/environments/tests/simple-wit/: world.wit
crates/expressions/src/: lib.rs  template.rs
crates/factor-key-value/: Cargo.toml
crates/factor-key-value/src/: host.rs  lib.rs
crates/factor-llm/: Cargo.toml
crates/factor-llm/src/: lib.rs
crates/factor-outbound-http/: Cargo.toml
crates/factor-outbound-http/src/: intercept.rs  lib.rs  runtime_config.rs  spin.rs  wasi.rs  wasi_2023_10_18.rs  wasi_2023_11_10.rs
crates/factor-outbound-http/src/runtime_config/: spin.rs
crates/factor-outbound-http/tests/: factor_test.rs
crates/factor-outbound-mqtt/src/: host.rs  lib.rs
crates/factor-outbound-mysql/: Cargo.toml
crates/factor-outbound-mysql/src/: client.rs  lib.rs
crates/factor-outbound-networking/: Cargo.toml
crates/factor-outbound-networking/src/: allowed_hosts.rs  blocked_networks.rs  config.rs  lib.rs  runtime_config.rs  tls.rs
crates/factor-outbound-networking/tests/: factor_test.rs
crates/factor-outbound-pg/: Cargo.toml
crates/factor-outbound-pg/src/: client.rs  host.rs  lib.rs  types.rs
crates/factor-outbound-pg/src/types/: convert.rs  decimal.rs  interval.rs  other.rs  pg_null.rs
crates/factor-outbound-pg/tests/: factor_test.rs
crates/factor-outbound-redis/: Cargo.toml
crates/factor-outbound-redis/src/: host.rs  lib.rs
crates/factor-sqlite/src/: host.rs  lib.rs
crates/factor-sqlite/tests/: factor_test.rs
crates/factor-variables/: Cargo.toml
crates/factor-variables/src/: host.rs  lib.rs
crates/factor-wasi/src/: io.rs  lib.rs  wasi_2023_10_18.rs  wasi_2023_11_10.rs
crates/factor-wasi/tests/: factor_test.rs
crates/factors-derive/: Cargo.toml
crates/factors-derive/src/: lib.rs
crates/factors-executor/: Cargo.toml
crates/factors-test/: Cargo.toml
crates/factors-test/src/: lib.rs
crates/http/: Cargo.toml
crates/http/src/: config.rs  lib.rs  routes.rs  trigger.rs
crates/http/src/wagi/: mod.rs
crates/key-value-aws/: Cargo.toml
crates/key-value-azure/: Cargo.toml
crates/key-value-azure/src/: store.rs
crates/key-value-redis/: Cargo.toml
crates/key-value-spin/: Cargo.toml
crates/llm-local/: Cargo.toml
crates/llm-local/src/: llama.rs
crates/llm-remote-http/: Cargo.toml
crates/loader/: Cargo.toml
crates/locked-app/: Cargo.toml
crates/manifest/: Cargo.toml
crates/manifest/src/: compat.rs
crates/manifest/src/compat/: allowed_http_hosts.rs
crates/manifest/src/schema/: common.rs  json_schema.rs  mod.rs  v2.rs
crates/manifest/tests/ui/: maximal.json  maximal.toml
crates/oci/: Cargo.toml
crates/outbound-networking-config/: Cargo.toml
crates/outbound-networking-config/src/: allowed_hosts.rs  blocked_networks.rs  lib.rs
crates/plugins/: Cargo.toml
crates/plugins/src/: lookup.rs  manifest.rs
crates/plugins/src/badger/: mod.rs
crates/routes/: Cargo.toml
crates/routes/src/: lib.rs
crates/runtime-config/: Cargo.toml
crates/runtime-factors/: Cargo.toml
crates/serde/: Cargo.toml
crates/serde/src/: version.rs
crates/sqlite-inproc/: Cargo.toml
crates/sqlite-inproc/src/: lib.rs
crates/telemetry/: Cargo.toml
crates/telemetry/src/: alert_in_dev.rs  detector.rs  env.rs  lib.rs  logs.rs  metrics.rs  testing.rs  traces.rs
crates/templates/: Cargo.toml
crates/templates/src/: constraints.rs  environment.rs  git.rs  interaction.rs  manager.rs  reader.rs  run.rs  source.rs  store.rs  template.rs
crates/templates/tests/templates/partials/content/: test.txt
crates/templates/tests/templates/partials/metadata/: spin-template.toml
crates/templates/tests/templates/partials/metadata/partials/: p1.liquid  p2.liquid
crates/test-codegen-macro/: Cargo.toml
crates/trigger/: Cargo.toml
crates/trigger-http/: Cargo.toml
crates/trigger-http/src/: headers.rs  instrument.rs  lib.rs  outbound_http.rs  server.rs  spin.rs  tls.rs  wagi.rs  wasi.rs
crates/trigger-redis/: Cargo.toml
crates/variables/: Cargo.toml
crates/variables-azure/: Cargo.toml
crates/variables-env/: Cargo.toml
crates/variables-env/src/: lib.rs
crates/variables-static/: Cargo.toml
crates/variables-static/src/: lib.rs  source.rs
crates/variables-vault/: Cargo.toml
cross/: Dockerfile  README.md
deploy/: README.md  spin-docs.nomad
docs/: README.md  spin.toml
docs/content/: index.md  release-notes-template.md  release-process.md
examples/: README.md
examples/http-cpp/: README.md  lib.cpp
examples/spin-timer/: Cargo.toml  README.md  trigger-timer.json
examples/vault-variable-test/: README.md
examples/wagi-http-rust/: Cargo.toml
hack/o11y-stack/: docker-compose.yaml
scripts/: bump-rust-template-sdk.sh
spin_example/myapp/: app.py  spin.toml
src/: commands.rs  lib.rs  subprocess.rs
src/clap_markdown/: mod.rs
src/commands/: build.rs  cloud.rs  external.rs  maintenance.rs  new.rs  plugins.rs  registry.rs  templates.rs  up.rs  watch.rs
supply-chain/: config.toml
templates/: Makefile
tests/: integration.rs  runtime.rs
tests/test-components/: Cargo.toml  build.rs
tests/testcases/: mod.rs
tests/testing-framework/: Cargo.toml
wit/: world.wit
(+71 files in other folders)
