[package]
name = "spin-cli"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[workspace.package]
version = "3.4.0-pre0"
authors = ["Spin Framework Contributors"]
edition = "2021"
license = "Apache-2.0 WITH LLVM-exception"
homepage = "https://spinframework.dev"
repository = "https://github.com/spinframework/spin"
rust-version = "1.84"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
clearscreen = "4"
comfy-table = "7"
command-group = "2"
ctrlc = { workspace = true }
dialoguer = { workspace = true }
futures = { workspace = true }
http = { workspace = true }
indicatif = "0.17"
itertools = { workspace = true }
lazy_static = { workspace = true }
levenshtein = "1"
nix = { version = "0.29", features = ["signal"] }
path-absolutize = { workspace = true }
pretty_assertions = "1.3"
regex = { workspace = true }
reqwest = { workspace = true }
rpassword = "7"
schemars = { version = "0.8.21", features = ["indexmap2", "semver"] }
semver = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = { workspace = true }
sha2 = { workspace = true }
subprocess = "0.2"
tempfile = { workspace = true }
tokio = { workspace = true, features = ["full"] }
toml = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
uuid = { version = "1.0", features = ["v4"] }
watchexec = { git = "https://github.com/watchexec/watchexec.git", rev = "8e91d26ef6400c1e60b32a8314cbb144fa33f288" }
watchexec-filterer-globset = { git = "https://github.com/watchexec/watchexec.git", rev = "8e91d26ef6400c1e60b32a8314cbb144fa33f288" }

spin-app = { path = "crates/app" }
spin-build = { path = "crates/build" }
spin-common = { path = "crates/common" }
spin-doctor = { path = "crates/doctor" }
spin-factor-outbound-networking = { path = "crates/factor-outbound-networking" }
spin-http = { path = "crates/http" }
spin-loader = { path = "crates/loader" }
spin-locked-app = { path = "crates/locked-app" }
spin-manifest = { path = "crates/manifest" }
spin-oci = { path = "crates/oci" }
spin-plugins = { path = "crates/plugins" }
spin-runtime-factors = { path = "crates/runtime-factors" }
spin-telemetry = { path = "crates/telemetry", features = [
  "tracing-log-compat",
] }
spin-templates = { path = "crates/templates" }
spin-trigger = { path = "crates/trigger" }
spin-trigger-http = { path = "crates/trigger-http" }
spin-trigger-redis = { path = "crates/trigger-redis" }
terminal = { path = "crates/terminal" }

[target.'cfg(target_os = "linux")'.dependencies]
# This needs to be an explicit dependency to enable
# '--features openssl/vendored', which is used for Linux releases.
openssl = { version = "0.10" }

[dev-dependencies]
anyhow = { workspace = true, features = ["backtrace"] }
conformance = { path = "tests/conformance-tests" }
conformance-tests = { workspace = true }
hex = "0.4"
http-body-util = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
redis = { workspace = true }
runtime-tests = { path = "tests/runtime-tests" }
test-codegen-macro = { path = "crates/test-codegen-macro" }
test-components = { path = "tests/test-components" }
test-environment = { workspace = true }
testing-framework = { path = "tests/testing-framework" }

[build-dependencies]
cargo-target-dep = { git = "https://github.com/fermyon/cargo-target-dep", rev = "482f269eceb7b1a7e8fc618bf8c082dd24979cf1" }
vergen = { version = "^8.2.1", default-features = false, features = [
  "build",
  "git",
  "gitcl",
  "cargo",
] }

[features]
default = ["llm"]
all-tests = ["extern-dependencies-tests"]
extern-dependencies-tests = []
llm = ["spin-runtime-factors/llm"]
llm-metal = ["llm", "spin-runtime-factors/llm-metal"]
llm-cublas = ["llm", "spin-runtime-factors/llm-cublas"]

[workspace]
members = [
  "crates/*",
  "tests/conformance-tests",
  "tests/runtime-tests",
  "tests/testing-framework",
]

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
base64 = "0.22"
bytes = "1"
chrono = "0.4"
clap = "3.2"
conformance-tests = { git = "https://github.com/fermyon/conformance-tests", rev = "ecd22a45bcc5c775a56c67689a89aa4005866ac0" }
ctrlc = { version = "3.4", features = ["termination"] }
dialoguer = "0.11"
dirs = "6.0"
flate2 = "1"
futures = "0.3"
futures-util = "0.3"
glob = "0.3"
heck = "0.5"
http = "1"
http-body-util = "0.1"
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["tokio"] }
indexmap = "2"
itertools = "0.14"
lazy_static = "1.5"
path-absolutize = "3"
quote = "1"
rand = "0.9"
redis = "0.29"
regex = "1"
reqwest = { version = "0.12", features = ["stream", "blocking"] }
rusqlite = "0.34"
# In `rustls` turn off the `aws_lc_rs` default feature and turn on `ring`.
# If both `aws_lc_rs` and `ring` are enabled, a panic at runtime will occur.
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "logging", "tls12"] }
rustls-pki-types = "1.12"
semver = "1"
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1.0"
sha2 = "0.10"
syn = "2"
tar = "0.4"
tempfile = "3"
test-environment = { git = "https://github.com/fermyon/conformance-tests", rev = "ecd22a45bcc5c775a56c67689a89aa4005866ac0" }
thiserror = "2"
tokio = "1"
tokio-rustls = { version = "0.26", default-features = false, features = ["logging", "tls12"] }
toml = "0.8"
toml_edit = "0.22"
tracing = { version = "0.1.41", features = ["log"] }
url = "2"
walkdir = "2"
wasm-encoder = "0.230"
wasm-metadata = "0.230"
wasm-pkg-client = "0.10"
wasm-pkg-common = "0.10"
wasmparser = "0.230"
wasmtime = "33.0.0"
wasmtime-wasi = "33.0.0"
wasmtime-wasi-http = "33.0.0"
wit-component = "0.230"
wit-parser = "0.230"

spin-componentize = { path = "crates/componentize" }

[workspace.lints.clippy]
# TODO: Remove this once https://github.com/rust-lang/rust-clippy/issues/12281 is resolved
blocks_in_conditions = "allow"

[[bin]]
name = "spin"
path = "src/bin/spin.rs"
