[package]
name = "spin-factor-outbound-pg"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
deadpool-postgres = { version = "0.14", features = ["rt_tokio_1"] }
moka = { version = "0.12", features = ["sync"] }
native-tls = "0.2"
postgres-native-tls = "0.5"
serde_json = { workspace = true }
spin-core = { path = "../core" }
spin-factor-outbound-networking = { path = "../factor-outbound-networking" }
spin-factors = { path = "../factors" }
spin-resource-table = { path = "../table" }
spin-world = { path = "../world" }
tokio = { workspace = true, features = ["rt-multi-thread"] }
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4", "with-serde_json-1", "with-uuid-1"] }
tracing = { workspace = true }
uuid = "1"

[dev-dependencies]
spin-factor-variables = { path = "../factor-variables" }
spin-factors-test = { path = "../factors-test" }
tokio = { workspace = true, features = ["macros", "rt"] }

[lints]
workspace = true
