[package]
name = "spin-http"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }

[dependencies]
anyhow = { workspace = true }
http = { workspace = true }
http-body-util = { workspace = true }
hyper = { workspace = true }
indexmap = { workspace = true }
percent-encoding = "2"
routefinder = "0.5.4"
serde = { workspace = true }
spin-app = { path = "../app", optional = true }
spin-factor-outbound-http = { path = "../factor-outbound-http" }
spin-http-routes = { path = "../routes" }
tracing = { workspace = true }
wasmtime = { workspace = true }
wasmtime-wasi = { workspace = true }
wasmtime-wasi-http = { workspace = true }

[dev-dependencies]
toml = { workspace = true }

[features]
default = ["runtime"]
runtime = ["dep:spin-app"]
