[package]
name = "spin-key-value-aws"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = { workspace = true }
async-once-cell = "0.5.4"
# Turn off default features to avoid pulling in "aws-smithy-runtime/default-https-client" which messes up tls provider selection
aws-config = { version = "1.1.7", default-features = false, features = ["rt-tokio", "credentials-process", "sso"] }
aws-credential-types = "1.1.7"
# Turn off default features to avoid pulling in "aws-smithy-runtime/default-https-client" which messes up tls provider selection
aws-sdk-dynamodb = { version = "1.49.0", default-features = false, features = ["rustls", "rt-tokio"] }
serde = { workspace = true }
spin-core = { path = "../core" }
spin-factor-key-value = { path = "../factor-key-value" }

[lints]
workspace = true
