[package]
name = "spin-key-value-azure"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
azure_core = "0.21.0"
azure_data_cosmos = "0.21.0"
azure_identity = "0.21.0"
futures = { workspace = true }
reqwest = { version = "0.12", default-features = false }
serde = { workspace = true }
spin-factor-key-value = { path = "../factor-key-value" }

[lints]
workspace = true

[features]
# Enables reusing connections to the Azure Cosmos DB service.
connection-pooling = []
default = ["connection-pooling"]
