[package]
name = "spin-llm-local"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }

[dependencies]
anyhow = { workspace = true }
candle = { version = "0.8", package = "candle-core" }
candle-nn = "0.8"
candle-transformers = "0.8"
rand = { workspace = true }
safetensors = "0.5"
serde = { workspace = true }
serde_json = { workspace = true }
spin-common = { path = "../common" }
spin-core = { path = "../core" }
spin-world = { path = "../world" }
tokenizers = "0.21"
tokio = { workspace = true, features = ["macros", "sync", "fs"] }
tracing = { workspace = true }

[features]
default = []
metal = ["candle/metal", "candle-nn/metal", "candle-transformers/metal"]
cublas = ["candle/cuda", "candle-nn/cuda", "candle-transformers/cuda"]

[lints]
workspace = true
