[package]
name = "spin-llm-remote-http"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }

[dependencies]
anyhow = { workspace = true }
reqwest = { workspace = true, features = ["gzip", "json"] }
serde = { workspace = true }
serde_json = { workspace = true }
spin-telemetry = { path = "../telemetry" }
spin-world = { path = "../world" }
tracing = { workspace = true }

[lints]
workspace = true
