[package]
name = "spin-manifest"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }

[dependencies]
anyhow = { workspace = true }
indexmap = { workspace = true, features = ["serde"] }
schemars = { version = "0.8.21", features = ["indexmap2", "semver"] }
semver = { workspace = true, features = ["serde"] }
serde = { workspace = true }
spin-serde = { path = "../serde" }
terminal = { path = "../terminal" }
thiserror = { workspace = true }
toml = { workspace = true, features = ["preserve_order"] }
url = { workspace = true }
wasm-pkg-common = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
glob = { workspace = true }
serde_json = { workspace = true }
ui-testing = { path = "../ui-testing" }

[[test]]
name = "ui"
path = "tests/ui.rs"
harness = false
