[package]
name = "spin-plugins"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
dirs = { workspace = true }
fd-lock = "4"
flate2 = { workspace = true }
is-terminal = "0.4"
path-absolutize = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
semver = { workspace = true, features = ["serde"] }
serde = { workspace = true }
serde_json = { workspace = true }
spin-common = { path = "../common" }
tar = { workspace = true }
tempfile = { workspace = true }
terminal = { path = "../terminal" }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["fs", "process", "rt", "macros"] }
tracing = { workspace = true }
url = { workspace = true, features = ["serde"] }
