[package]
name = "spin-serde"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }

[dependencies]
anyhow = { workspace = true }
base64 = { workspace = true }
schemars = { version = "0.8.21", features = ["indexmap2", "semver"] }
semver = { workspace = true, features = ["serde"] }
serde = { workspace = true }
wasm-pkg-common = { workspace = true }
