[package]
name = "spin-templates"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }

[dependencies]
anyhow = { workspace = true }
bytes = { workspace = true }
dialoguer = { workspace = true }
flate2 = { workspace = true }
fs_extra = "1"
heck = { workspace = true }
indexmap = { workspace = true, features = ["serde"] }
itertools = { workspace = true }
lazy_static = { workspace = true }
liquid = "0.26"
liquid-core = "0.26"
liquid-derive = "0.26"
path-absolutize = { workspace = true }
pathdiff = "0.2"
regex = { workspace = true }
reqwest = { workspace = true }
semver = { workspace = true }
serde = { workspace = true }
spin-common = { path = "../common" }
spin-manifest = { path = "../manifest" }
tar = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["fs", "process", "rt", "macros"] }
toml = { workspace = true }
toml_edit = { workspace = true }
url = { workspace = true }
walkdir = { workspace = true }
