[package]
name = "spin-variables-static"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
spin-common = { path = "../common" }
spin-expressions = { path = "../expressions" }
spin-factors = { path = "../factors" }
toml = { workspace = true }

[lints]
workspace = true

[dev-dependencies]
tempfile = { workspace = true }