[package]
name = "spin-variables-vault"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
serde = { workspace = true }
spin-expressions = { path = "../expressions" }
spin-factors = { path = "../factors" }
tracing = { workspace = true }
vaultrs = "0.7"

[lints]
workspace = true
